feat: sync prettier with eslint

--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,17 +1,17 @@
 ---
 // Import utilities from `astro:content`
 interface Props {
-	title: string;
-	description: string;
-	image?: string;
-	canonicalURL?: URL | string;
+  title: string;
+  description: string;
+  image?: string;
+  canonicalURL?: URL | string;
 }
 
 const {
-	title,
-	description,
-	image = '/blog-logo.png', 
-	canonicalURL = new URL(Astro.url.pathname, Astro.site),
+  title,
+  description,
+  image = "/blog-logo.png",
+  canonicalURL = new URL(Astro.url.pathname, Astro.site),
 } = Astro.props;
 ---
 
