--- a/src/components/StackBox.astro
+++ b/src/components/StackBox.astro
@@ -1,27 +1,31 @@
 ---
 const Position = {
-  RELATIVE: 'relative',
-  ABSOLUTE: 'absolute',
-  STATIC: 'static',
-} as const
+  RELATIVE: "relative",
+  ABSOLUTE: "absolute",
+  STATIC: "static",
+} as const;
 
-type PositionType = (typeof Position)[keyof typeof Position]
+type PositionType = (typeof Position)[keyof typeof Position];
 
 interface Props {
-  imageSource: string
-  text?: string
-  position?: PositionType
-  extendedClass?: string
+  imageSource: string;
+  text?: string;
+  position?: PositionType;
+  extendedClass?: string;
 }
 
-const { imageSource, text, position = "static", extendedClass } = Astro.props
+const { imageSource, text, position = "static", extendedClass } = Astro.props;
 ---
 
-<div class={`${position} ${extendedClass} hidden sm:flex stack-box space-x-1 px-[10px] py-[10px] items-center rounded-xl bg-gradient-to-b from-[#3E3E3E] to-[#343434] [box-shadow:inset_0px_-4px_4px_rgba(14,14,14,0.5),inset_0px_1px_1px_rgba(255,255,255,0.4)]`}>
-    <img src={imageSource} alt="Stackbox logo" class="box-border w-7 h-7"/>
-    {text && (
+<div
+  class={`${position} ${extendedClass} hidden sm:flex stack-box space-x-1 px-[10px] py-[10px] items-center rounded-xl bg-gradient-to-b from-[#3E3E3E] to-[#343434] [box-shadow:inset_0px_-4px_4px_rgba(14,14,14,0.5),inset_0px_1px_1px_rgba(255,255,255,0.4)]`}
+>
+  <img src={imageSource} alt="Stackbox logo" class="box-border w-7 h-7" />
+  {
+    text && (
       <p class="text-2xl font-semibold bg-gradient-to-b from-[#F6F6F6] to-[#909090] text-transparent bg-clip-text [text-shadow:0px_1px_2px_rgba(13,13,13,0.4)]">
-          {text}
+        {text}
       </p>
-    )}
+    )
+  }
 </div>
