--- a/src/components/blog/BlogTag.astro
+++ b/src/components/blog/BlogTag.astro
@@ -1,10 +1,11 @@
 ---
 interface Props {
-    tags: string
+  tags: string;
 }
 
-const { tags } = Astro.props
+const { tags } = Astro.props;
 ---
+
 <div class="py-2 px-3 rounded-full bg-[#272727] text-[#F6F6F6]">
-    <p class="font-normal text-sm">{tags}</p>
+  <p class="font-normal text-sm">{tags}</p>
 </div>
