--- a/src/components/blog/Comments.astro
+++ b/src/components/blog/Comments.astro
@@ -1,8 +1,10 @@
 ---
 
 ---
+
 <div class="giscus-comments mt-5 w-full">
-  <script src="https://giscus.app/client.js"
+  <script
+    src="https://giscus.app/client.js"
     data-repo="cakuakz/rafi.blogsopt"
     data-repo-id="R_kgDONNJqTw"
     data-category="General"
@@ -17,8 +19,7 @@
     crossorigin="anonymous"
     async
     is:inline
-  >
-  </script>
+  ></script>
 </div>
 <style>
   .giscus-frame {
