--- a/src/pages/blog/[...slug].astro
+++ b/src/pages/blog/[...slug].astro
@@ -1,19 +1,20 @@
 ---
-import BlogLayout from '@layouts/BlogLayout.astro';
-import { type CollectionEntry, getCollection } from 'astro:content';
+import BlogLayout from "@layouts/BlogLayout.astro";
+import { type CollectionEntry, getCollection } from "astro:content";
 
 export async function getStaticPaths() {
-	const posts = await getCollection('blog');
-	return posts.map((post) => ({
-		params: { slug: post.slug },
-		props: post,
-	}));
+  const posts = await getCollection("blog");
+  return posts.map((post) => ({
+    params: { slug: post.slug },
+    props: post,
+  }));
 }
-type Props = CollectionEntry<'blog'>;
+type Props = CollectionEntry<"blog">;
 
 const post = Astro.props;
 const { Content, headings } = await post.render();
 ---
+
 <BlogLayout {...post.data} headings={headings} slug={post.slug}>
-    <Content />
+  <Content />
 </BlogLayout>
