--- a/src/section/home/Traits.astro
+++ b/src/section/home/Traits.astro
@@ -1,56 +1,61 @@
 ---
-import { Image } from "astro:assets"
-import flashLogo from "../../../public/assets/icons/flash-logo.svg"
-import bracesCheckmarkLogo from "../../../public/assets/icons/braces-checkmark-logo.svg"
-import layerStackLogo from "../../../public/assets/icons/layer-stack-logo.svg"
-import CustomPageTitle from "@components/CustomPageTitle.astro"
+import { Image } from "astro:assets";
+import flashLogo from "../../../public/assets/icons/flash-logo.svg";
+import bracesCheckmarkLogo from "../../../public/assets/icons/braces-checkmark-logo.svg";
+import layerStackLogo from "../../../public/assets/icons/layer-stack-logo.svg";
+import CustomPageTitle from "@components/CustomPageTitle.astro";
 
 const traitsData = [
-    {
-        logoUrl: flashLogo,
-        title: "Optimized Performance",
-        description: "Delivering fast, stable, and responsive applications through efficient code practices"
-    },
-    {
-        logoUrl: bracesCheckmarkLogo,
-        title: "Precision in Execution",
-        description: "Ensuring every detail enhances functionality, user experience, and overall quality"
-    },
-    {
-        logoUrl: layerStackLogo,
-        title: "Readable & Scalable Code",
-        description: "Delivering fast, stable, and responsive applications through efficient code practices"
-    }
-]
+  {
+    logoUrl: flashLogo,
+    title: "Optimized Performance",
+    description:
+      "Delivering fast, stable, and responsive applications through efficient code practices",
+  },
+  {
+    logoUrl: bracesCheckmarkLogo,
+    title: "Precision in Execution",
+    description:
+      "Ensuring every detail enhances functionality, user experience, and overall quality",
+  },
+  {
+    logoUrl: layerStackLogo,
+    title: "Readable & Scalable Code",
+    description:
+      "Delivering fast, stable, and responsive applications through efficient code practices",
+  },
+];
 ---
+
 <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8 md:gap-12">
-    {traitsData.map((data) => (
-        <div class="w-full max-w-[379px] mx-auto mb-8 md:mb-0">
-            <div class="flex items-start space-x-4 content-traits">
-                <div class="flex-shrink-0 p-[0.5px] w-14 h-14 rounded-lg bg-gradient-to-b from-[#464646] to-[#2C2C2C] bg-clip-border">
-                    <div class="bg-[#282828] flex justify-center bg-opacity-70 w-14 h-14 rounded-lg shadow-[inset_2px_4px_16px_rgba(248,248,248,0.06)]">
-                        <Image src={data.logoUrl} alt="logo" width={34} height={34}/>
-                    </div>
-                </div>
-                <div class="flex flex-col items-start">
-                    <CustomPageTitle 
-                        title={data.title}
-                        textSize="text-xl sm:text-2xl"
-                    />
-                    <p class="text-sm sm:text-base font-normal text-[#909090] leading-normal mt-3">{data.description}</p>
-                </div>
+  {
+    traitsData.map((data) => (
+      <div class="w-full max-w-[379px] mx-auto mb-8 md:mb-0">
+        <div class="flex items-start space-x-4 content-traits">
+          <div class="flex-shrink-0 p-[0.5px] w-14 h-14 rounded-lg bg-gradient-to-b from-[#464646] to-[#2C2C2C] bg-clip-border">
+            <div class="bg-[#282828] flex justify-center bg-opacity-70 w-14 h-14 rounded-lg shadow-[inset_2px_4px_16px_rgba(248,248,248,0.06)]">
+              <Image src={data.logoUrl} alt="logo" width={34} height={34} />
             </div>
+          </div>
+          <div class="flex flex-col items-start">
+            <CustomPageTitle title={data.title} textSize="text-xl sm:text-2xl" />
+            <p class="text-sm sm:text-base font-normal text-[#909090] leading-normal mt-3">
+              {data.description}
+            </p>
+          </div>
         </div>
-    ))}
+      </div>
+    ))
+  }
 </div>
 <script>
-    import { animate, stagger, inView } from "motion";
+  import { animate, stagger, inView } from "motion";
 
-    const traitContent = document.querySelectorAll('.content-traits')
+  const traitContent = document.querySelectorAll(".content-traits");
 
-    traitContent.forEach((element) => {
-        inView(element, (info) => {
-            animate(info.target, { opacity: [0.1, 1], y: [100, 0] }, { delay: stagger(0.2)})
-        })
-    })
+  traitContent.forEach((element) => {
+    inView(element, (info) => {
+      animate(info.target, { opacity: [0.1, 1], y: [100, 0] }, { delay: stagger(0.2) });
+    });
+  });
 </script>
