--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -1,5 +1,4 @@
 ---
-// Import utilities from `astro:content`
 interface Props {
   title: string;
   description: string;
@@ -29,11 +28,10 @@ const {
 
 <!-- Primary Meta Tags -->
 <title>{title}</title>
-<meta name="title" content={title} />
 <meta name="description" content={description} />
 
 <!-- Open Graph / Facebook -->
-<meta property="og:type" content="website" />
+<meta property="og:type" content={Astro.url.pathname.startsWith("/blog/") ? "article" : "website"} />
 <meta property="og:url" content={canonicalURL} />
 <meta property="og:title" content={title} />
 <meta property="og:description" content={description} />
@@ -45,3 +43,8 @@ const {
 <meta property="twitter:title" content={title} />
 <meta property="twitter:description" content={description} />
 <meta property="twitter:image" content={new URL(image, Astro.site)} />
+
+<!-- Article Metadata for Blog Posts -->
+{Astro.url.pathname.startsWith("/blog/") && (
+  <meta property="article:published_time" content="{new Date().toISOString()}" />
+)}
